force-app/main/default/objects/Producto__c/Producto__c.object-meta.xml
<CustomObject>
    <label>Producto</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Nro de Producto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>