force-app/main/default/objects/Producto__c/fields/BI_ITEM_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>BI_ITEM_CATEGORY__c</fullName>
    <label>Categoría de BI de Item</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>