force-app/main/default/objects/Producto__c/fields/BOX_EQUIVALENCE__c.field-meta.xml
<CustomField>
    <fullName>BOX_EQUIVALENCE__c</fullName>
    <label>Equivalencia de caja</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>