force-app/main/default/objects/Producto__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <label>EAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>