force-app/main/default/objects/Producto__c/fields/INVENTORY_ITEM_STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>INVENTORY_ITEM_STATUS_CODE__c</fullName>
    <label>Código de estado de item de inventario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>