force-app/main/default/objects/Producto__c/fields/ITEM_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>ITEM_NUMBER__c</fullName>
    <externalId>true</externalId>
    <label>Número de Item</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>