force-app/main/default/objects/Producto__c/fields/ITEM_UOM__c.field-meta.xml
<CustomField>
    <fullName>ITEM_UOM__c</fullName>
    <label>Item UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>