force-app/main/default/objects/Producto__c/fields/MASTER_NAME__c.field-meta.xml
<CustomField>
    <fullName>MASTER_NAME__c</fullName>
    <label>Nombre de Maestra de Inventario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>