force-app/main/default/objects/Producto__c/fields/MASTER_ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>MASTER_ORG_ID__c</fullName>
    <label>Organización de inventario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>