force-app/main/default/objects/Producto__c/fields/ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>ORG_ID__c</fullName>
    <label>ORG ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>