force-app/main/default/objects/Producto__c/fields/PRIMARY_UOM_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_UOM_CODE__c</fullName>
    <label>Código UOM primario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>