force-app/main/default/objects/Producto__c/fields/Trazabilidad_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Trazabilidad_de_Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trazabilidad de Pedido</label>
    <referenceTo>Trazabilidad_de_Pedido__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>