force-app/main/default/objects/Producto__c/fields/Trazabilidad_de_pedidos__c.field-meta.xml
<CustomField>
    <fullName>Trazabilidad_de_pedidos__c</fullName>
    <label>Trazabilidad de Pedidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>