force-app/main/default/objects/Producto__c/fields/UOM_BOX__c.field-meta.xml
<CustomField>
    <fullName>UOM_BOX__c</fullName>
    <label>UOM caja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>