force-app/main/default/objects/Producto__c/fields/UOM_PALLET__c.field-meta.xml
<CustomField>
    <fullName>UOM_PALLET__c</fullName>
    <label>UOM pallet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>