force-app/main/default/objects/Producto__c/fields/UOM_VOLUME__c.field-meta.xml
<CustomField>
    <fullName>UOM_VOLUME__c</fullName>
    <label>UOM volúmen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>