force-app/main/default/objects/Producto__c/fields/UOM_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>UOM_WEIGHT__c</fullName>
    <label>UOM peso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>