force-app/main/default/objects/Producto__c/fields/VOLUME_EQUIVALENCE__c.field-meta.xml
<CustomField>
    <fullName>VOLUME_EQUIVALENCE__c</fullName>
    <label>Equivalencia de volúmen</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>