force-app/main/default/objects/Producto__c/fields/WAREHOUSE_ID__c.field-meta.xml
<CustomField>
    <fullName>WAREHOUSE_ID__c</fullName>
    <label>Depósito Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>