force-app/main/default/objects/Producto__c/fields/WAREHOUSE_NAME__c.field-meta.xml
<CustomField>
    <fullName>WAREHOUSE_NAME__c</fullName>
    <label>Nombre de Depósito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>