force-app/main/default/objects/Producto__c/fields/WEIGHT_EQUIVALENCE__c.field-meta.xml
<CustomField>
    <fullName>WEIGHT_EQUIVALENCE__c</fullName>
    <label>Equivalencia de peso</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>